<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DermCalc</string>

    <string name="nav_back_description">Indietro</string>
    <string name="main_content_description">Contenuto principale</string>

    <string name="welcome_text">"Benvenuto, "</string>
    <string name="guest_user">Guest</string>

    <string name="main_tools_title">STRUMENTI PRINCIPALI</string>

    <string name="title_pasi">Calcolatore PASI</string>
    <string name="title_easi">Calcolatore EASI</string>
    <string name="title_bmi">Calcolatore BMI</string>
    <string name="title_bsa">Calcolatore BSA</string>
    <string name="title_indices">Calcolatore Indici</string>
    <string name="title_patient_stats">Statistiche Paziente</string>

    <string name="desc_pasi">indice medico utilizzato per valutare la gravità della psoriasi e misurare l\'efficacia dei trattamenti nel tempo</string>
    <string name="desc_easi">Score per dermatite atopica basato su estensione e gravità delle lesioni</string>
    <string name="desc_bmi">Indice di massa corporea</string>
    <string name="desc_bsa">Percentuale di superficie corporea coinvolta da una patologia</string>
    <string name="desc_indices">Calcola rapidamente indici clinici. Inserisci i valori e ottieni il risultato istantaneo.</string>
    <string name="desc_patient_stats">Visualizza lo storico degli indici per ogni paziente, con percentuali di andamento nel tempo.</string>

    <string name="btn_start_calculation">Inizia calcolo</string>
    <string name="btn_search_patient">Cerca paziente</string>

    <string name="nav_home">Home</string>
    <string name="nav_patients">Pazienti</string>
    <string name="nav_reports">Referti</string>
    <string name="nav_change_theme">Cambia Tema</string>

    <!-- Login -->
    <string name="login_title" translatable="false">DermCalc - Login</string>
    <string name="login_username_hint" translatable="false">Username</string>
    <string name="login_password_hint" translatable="false">Password</string>
    <string name="login_btn_text">Accedi</string>

    <!-- Profile -->
    <string name="profile_toolbar_title">Area Riservata</string>
    <string name="profile_surname_label">Cognome:</string>
    <string name="profile_username_label" translatable="false">Username account:</string>
    <string name="profile_loading_text">Caricamento...</string>
    <string name="profile_btn_logout">Disconnetti Account</string>

    <!-- Pazienti -->
    <string name="patients_list_title">Pazienti a carico</string>
    <string name="btn_add_patient">+ Aggiungi Nuovo Paziente</string>

    <string name="add_patient_title">Nuovo Paziente</string>
    <string name="hint_name">Nome</string>
    <string name="hint_surname">Cognome</string>
    <string name="hint_fiscal_code">Codice Fiscale</string>
    <string name="btn_cancel">Annulla</string>
    <string name="btn_save">Salva</string>
    <string name="desc_delete_patient">Elimina paziente</string>

    <!-- Referti -->
    <string name="reports_history_title">Storico Referti Medici</string>
    <string name="report_detail_title">Dettaglio Referto</string>
    <string name="btn_delete_assessment">Elimina Valutazione</string>
    <string name="placeholder_section_title">TITOLO SEZIONE</string>
    <string name="placeholder_clinical_data">Dati clinici</string>

    <!-- Statistiche -->
    <string name="stats_trend_title">Andamento Indici</string>
    <string name="stats_pasi_placeholder">PASI: --</string>
    <string name="stats_easi_placeholder">EASI: --</string>
    <string name="stats_bmi_placeholder">BMI: --</string>
    <string name="stats_bsa_placeholder">BSA: --</string>

    <!-- Indice EASI e PASI-->
    <string name="easi_title">Calcolo Indice EASI</string>
    <string name="easi_description">Seleziona i parametri di gravità (0-4) e l\'area coinvolta (0-6) per ciascun distretto corporeo. Spunta \'Zona Esente\' se l\'area non è interessata.</string>

    <string name="easi_patient_not_selected">Seleziona un paziente per calcolare l\'indice EASI</string>

    <string name="easi_section_head">Testa (H)</string>
    <string name="easi_section_trunk">Tronco (T)</string>
    <string name="easi_section_upper">Arti Superiori (U)</string>
    <string name="easi_section_lower">Arti Inferiori (L)</string>

    <string name="easi_zone_exempt">Zona Esente</string>

    <string name="easi_param_erythema">Eritema (Rossore)</string>
    <string name="easi_param_induration">Infiltrazione (Spessore)</string>
    <string name="easi_param_desquamation">Desquamazione (Squame)</string>
    <string name="easi_param_excoriation">Escoriazione (Graffi)</string>
    <string name="easi_param_lichenification">Lichenificazione:</string>
    <string name="easi_param_area">Area Corporea Coinvolta</string>

    <string name="easi_result_score_label">Punteggio Totale EASI</string>
    <string name="easi_result_score_default">0.0</string>
    <string name="easi_result_severity_label">Classe di Severità</string>
    <string name="easi_result_severity_default">Lieve</string>
    <string name="easi_btn_calculate">Calcola Risultato</string>

    <string name="easi_severity_clear">Quasi Assente</string>
    <string name="easi_severity_mild">Lieve</string>
    <string name="easi_severity_moderate">Moderato</string>
    <string name="easi_severity_severe">Grave</string>
    <string name="easi_severity_very_severe">Molto Grave</string>

    <string name="easi_btn_save">Salva Valutazione</string>

    <!-- Indice PASI -->
    <string name="pasi_title">Calcolo Indice PASI</string>
    <string name="pasi_description">Seleziona i parametri di gravità (0-4) e l\'area coinvolta (0-6) per ciascun distretto corporeo. Spunta \'Zona Esente\' se l\'area non è interessata.</string>
    <string name="pasi_patient_not_selected">Seleziona un paziente per calcolare l\'indice PASI</string>

    <string name="pasi_result_score_label">Punteggio Totale PASI</string>

    <!-- Indice BMI-->
    <string name="bmi_calc_title">Calcolo dell\'Indice</string>
    <string name="bmi_hint_weight">Peso (kg)</string>
    <string name="bmi_hint_height">Altezza (cm)</string>
    <string name="bmi_result_score_label">Punteggio BMI</string>
    <string name="bmi_result_severity_label">Categoria</string>
    <string name="bmi_placeholder_value">BMI: --</string>
    <string name="bmi_placeholder_status">Stato: --</string>
    <string name="bmi_placeholder_default">--</string>

    <!-- Indice BSA -->
    <string name="bsa_section_area">Estensione Patologia per Area</string>
    <string name="bsa_param_head_neck">Testa e Collo (Max 9%):</string>
    <string name="bsa_param_arm_right">Arto Superiore DX (Max 9%):</string>
    <string name="bsa_param_arm_left">Arto Superiore SX (Max 9%):</string>
    <string name="bsa_param_trunk_ant">Tronco Anteriore (Max 18%):</string>
    <string name="bsa_param_trunk_post">Tronco Posteriore (Max 18%):</string>
    <string name="bsa_param_leg_right">Arto Inferiore DX (Max 18%):</string>
    <string name="bsa_param_leg_left">Arto Inferiore SX (Max 18%):</string>
    <string name="bsa_param_genitals">Genitali (Max 1%):</string>
    <string name="bsa_result_score_label">Punteggio BSA</string>
    <string name="bsa_result_severity_label">Severità</string>
    <string name="bsa_result_score_default">0.0%</string>
    <string name="bsa_result_severity_default">-</string>



</resources>